# FFDesktopV2

FFDesktop-master/: readme.md
FFDesktop-master/freelance-flow/: index.html  package-lock.json  package.json
FFDesktop-master/freelance-flow/playwright-report/: index.html
FFDesktop-master/freelance-flow/src/: App.jsx
FFDesktop-master/freelance-flow/src-tauri/: tauri.conf.json
FFDesktop-master/freelance-flow/tests/: import-export.spec.cjs
freelance-flow/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  vite.config.js
freelance-flow/api/: activate.js
freelance-flow/playwright-report/: index.html
freelance-flow/src/: App.jsx  index.css
freelance-flow/src-tauri/: Cargo.toml  tauri.conf.json
freelance-flow/src-tauri/src/: db.rs  error.rs  main.rs  models.rs  old_models.rs
freelance-flow/src-tauri/src-tauri/capabilities/: default.json
freelance-flow/src/components/: Button.jsx  Card.jsx  Dialog.jsx  FAB.jsx  Header.jsx  Input.jsx  KanbanCard.jsx  KanbanColumn.jsx  Label.jsx  Layout.jsx  LicenseGate.jsx  Pagination.jsx  ResetData.jsx  Select.jsx  Sidebar.jsx  TaskDialog.jsx  Textarea.jsx  Toast.jsx
freelance-flow/src/hooks/: useLocalStorage.js  usePagination.js
freelance-flow/src/lib/: initialData.js  invoiceTranslations.js  tauri.js  utils.js
freelance-flow/src/store/: index.js
freelance-flow/tests/: import-export.spec.js  invoice-currency.spec.js  search.spec.js  time-tracking.spec.cjs
jules-scratch/verification/: verify_app_startup.py  verify_archive_fix.py  verify_invoice_flow.py
(+47 files in other folders)
