[package]
name = "freelance-flow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.23", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-beta.10"
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-fs = "2.0.0-beta.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
thiserror = "1.0"
